--- a/package.json
+++ b/package.json
@@ -32,5 +32,17 @@
   },
   "devDependencies": {
     "react-dev-utils": "^9.0.1"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ChrisDombele/Boston-Crave.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ChrisDombele/Boston-Crave/issues"
+  },
+  "homepage": "https://github.com/ChrisDombele/Boston-Crave#readme"
 }
